--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@
 }
 
 @media (max-width:768px) {
-  .header { text-align: center;
+  .header { 
+    text-align: center;
   }
 }
 .centered-main-page-element {
@@ -35,14 +36,14 @@
   display: flex;
 }
 .list {
-  margin:0;
+  margin: 0;
   padding: 0px;
 }
 li, h3 {
-  list-style:none;
+  list-style: none;
 }
-input,button{
-  outline:none;
+input,button {
+  outline: none;
 }
 .button {
   background: none;
@@ -134,13 +135,13 @@ input,button{
 
 /* Edit Task */
 .li .input-text {
-  display:none
+  display: none
 }
-.edit-mode .task-lable{
+.edit-mode .task-lable {
   display: none;
 }
  .edit-mode .edit-input {
-  display:inline-block;
-  width:224px;
+  display: inline-block;
+  width: 224px;
 }
 
